# Voxel

./: CMakeLists.txt  Makefile  TODO.txt  requirements.txt
include/: camera.h  gl_manager.h  input.h  vector.h
src/: camera.c  gl_manager.c  gl_manager.h  input.c  main.c  player.c  player.h  utilities.c  utilities.h
src/app/: main.c
src/core/: file.c  vector.c  vector.h
src/game/: camera.c  camera.h
src/gpu/: buffer.c  buffer.h  gpuDebug.c  gpuDebug.h  shader.c  shader.h  texture.c  texture.h
src/platform/: gameState.c  gameState.h  input.c  input.h  settings.c  settings.h  time.c  time.h  window.c  window.h
src/render/: renderer.c  renderer.h
src/render/shaders/: fragment.frag  raymarching.comp  vertex.vert
src/shaders/: draw_screen.comp  fragment.frag  raymarching comp  raymarching.frag  vertex.vert
src/world/: world.c  world.h
